--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
     "geocoder": "^0.2.3",
     "mongoose": "^4.10.5",
     "react": "^15.5.4",
