capitalized givenName on main page

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "geocoder": "^0.2.3",
+    "handlebars-helpers": "^0.8.2",
     "mongoose": "^4.10.5",
     "path": "^0.12.7",
     "react": "^15.5.4",
