--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "geocoder": "^0.2.3",
+    "geolocation": "^0.2.0",
     "google-auth-library": "^0.10.0",
+    "html5-geolocation": "^1.0.1",
     "mongoose": "^4.10.6",
     "path": "^0.12.7",
     "react": "^15.6.1",
