--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.16.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "geocoder": "^0.2.3",
