--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
     "webpack": "^2.6.1"
   }
 }
