--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "geocoder": "^0.2.3",
     "geolocation": "^0.2.0",
     "google-auth-library": "^0.10.0",
+    "googleapis": "^20.0.1",
     "html5-geolocation": "^1.0.1",
     "mongoose": "^4.10.6",
     "path": "^0.12.7",
