--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "geocoder": "^0.2.3",
     "geolocation": "^0.2.0",
     "google-auth-library": "^0.10.0",
-    "googleapis": "^20.0.1",
     "html5-geolocation": "^1.0.1",
-    "mongoose": "^4.10.6",
+    "mongoose": "^4.11.0",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-login": "^2.9.2",
     "react-router-dom": "^4.1.1",
     "twilio": "^3.4.0"
   },
