--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.16.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "concat-map": "0.0.1",
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
@@ -30,6 +31,7 @@
     "geolocation": "^0.2.0",
     "google-auth-library": "^0.10.0",
     "html5-geolocation": "^1.0.1",
+    "loader-utils": "^1.1.0",
     "mongoose": "^4.11.0",
     "path": "^0.12.7",
     "react": "^15.6.1",
