--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.2",
+    "react-promise": "^1.1.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
