--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-google-login": "^2.9.2",
     "react-promise": "^1.1.3",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
+    "redux-form": "^6.8.0",
     "redux-promise": "^0.5.3",
     "twilio": "^3.4.0"
   },
