--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "sudo mongod && nodemon server.js && webpack -w",
     "seed": "(cd test && node firstSeed)"
   },
   "repository": {
